client user interfaces et client feigne

--- a/clientui/src/main/resources/templates/Paiment.html
+++ b/clientui/src/main/resources/templates/Paiment.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://thymeleaf.org">
 <head>
     <title>Mcommerce</title>
 
@@ -26,6 +27,10 @@
 
             <!-- On passe l'id de la commande ET le montant de celle-ci afin que le contrôleur ait les informations nécessaires pour faire appel au microservice de paiement -->
             <p>
+                <!--/*@thymesVar id="commande" type=""*/-->
+                <!--/*@thymesVar id="montant" type=""*/-->
+                <!--/*@thymesVar id="id" type=""*/-->
+                <!--/*@thymesVar id="id" type=""*/-->
                 <a th:href="@{|/payer-commande/${commande.id}/${montant}|}" class="font-weight-bold">Payer Ma Commande</a>
             </p>
 
